#  This file is part of Pairs
#
#  Copyright (C) <2011>       <Marco Calignano>     <marco.calignano@gmail.com>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License as
#  published by the Free Software Foundation; either version 2 of
#  the License or (at your option) version 3 or any later version
#  accepted by the membership of KDE e.V. (or its successor approved
#  by the membership of KDE e.V.), which shall act as a proxy 
#  defined in Section 14 of version 3 of the license.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.


install(FILES player1.svg player2.svg player3.svg player4.svg player5.svg player6.svg player7.svg player8.svg 
              player9.svg player10.svg player11.svg player12.svg player13.svg player14.svg player15.svg player16.svg 
              player17.svg player18.svg player19.svg player20.svg
              DESTINATION  ${DATA_INSTALL_DIR}/pairs/players )
