install( FILES 
    kde.memory
    
    dolphin.svg
    kalgebra.svg
    kdevelop.svg
    konqueror.svg
    kopete.svg
    ktuberling.svg
    kturtle.svg
    okular.svg
    okular.svg
    kde.svg

    linux.memory

    Tux.svg
    centos_logo.svg
    debian-logo.svg 
    fedora-logo.svg  
    gentoo-logo.svg  
    knoppix-logo.svg 
    mandrake_logo.svg
    mint-logo.svg  
    redhat-logo.svg
    suse_logo.svg  
    ubuntu-logo.svg

    
    DESTINATION ${DATA_INSTALL_DIR}/kmemory/themes)
